src/test/deca/context/valid/custom/if/if_unknown_int_decl.deca
// Description:
//   Test if on a variable of type int that has not been declared.
// Results:
//    Line 11: Error, the variable is not initialised.
//
// History:
//    created on 12/01/2022

{
   int i;
   if (i == 1) {
        println("Error, the variable is not initialised");
   } else {
        println("Error, the variable is not initialised");
   }
}
